using stream, removing unused arguments and adding private construstor to each utils file to hide the implicit public one